--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "supermall",
+  "name": "mall",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,15 @@
   "dependencies": {
     "axios": "^0.18.0",
     "better-scroll": "^1.13.2",
-    "vue": "^2.5.21",
-    "vue-router": "^3.0.2"
+    "vue": "^2.5.17",
+    "vue-lazyload": "^1.2.6",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-service": "^3.2.0",
-    "vue-template-compiler": "^2.5.21"
+    "@vue/cli-plugin-babel": "^3.0.5",
+    "@vue/cli-service": "^3.0.5",
+    "postcss-px-to-viewport": "0.0.3",
+    "vue-template-compiler": "^2.5.17"
   }
 }
